# coursework

./: main.py  pyproject.toml  train.py  utils.py
tests/: test_func.py
